<resources>
    <string name="app_name">Hestia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Visitante</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="meu_feed">Meu Feed</string>
    <string name="meus_imoveis">Meus Imoveis</string>
    <string name="default_card_title">Apartamento 1</string>
    <string name="default_card_moradores">Moradores: 2/4</string>
    <string name="default_card_interessados">Interessados: 6</string>
    <string name="default_price">R$ 600,00</string>
    <string name="default_comodos">2 quartos, 1 banheiro, 1 sala</string>
    <string name="default_short_description">Perto do centro</string>
    <string name="tenho_interesse">Tenho interesse</string>
    <string name="default_adress">Avenida São Carlos, n 100</string>
    <string name="conversar_dono">Conversar com o dono</string>
    <string name="title_desc">Descrição:</string>
    <string name="salvar">Salvar</string>
    <string name="logout">Logout</string>
    <string name="uploading">Uploading</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informacoes_do_imovel">Informações do Imovel</string>
    <string name="logradouro">Logradouro</string>
    <string name="tipo_do_imovel">Tipo do Imóvel</string>
    <string name="preco">Preço (R$)</string>
    <string name="max_moradores">Nº Máximo de moradores</string>
    <string name="_1">0</string>
    <string name="vagas_garagem">Nº Vagas na garagem</string>
    <string name="n_quartos">Nº Quartos</string>
    <string name="n_banheiros">Nº Banheiros</string>
    <string name="n_salas">Nº Salas</string>
    <string name="n_cozinhas">Nº Cozinhas</string>
    <string name="info_form_desc">Descrição (opcional)</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="evie_fotos">Envie pelo menos 3 fotos</string>
    <string name="localizacao">Localização</string>
    <string name="hint_nome">Nome</string>
    <string name="descricao_imagem_usuario">Imagem do usuário</string>
    <string name="hint_bio">Bio</string>
    <string name="voc_deseja">Você deseja:</string>
    <string name="radio_procurar_vagas">Procurar vagas</string>
    <string name="radio_oferecer_vagas">Oferecer vagas</string>
    <string name="desc_logo_do_aplicativo">Logo do aplicativo</string>
    <string name="descricao_foto_principal">Foto principal do imóvel</string>
    <string name="zero">0</string>
    <string name="entrar">Entrar</string>
    <string name="perfil">Perfil</string>
    <string name="prefer_ncias">Preferências</string>
    <string name="minha_lista">Minha Lista</string>
    <string name="meusimoveis">Meus Imóveis</string>
    <string name="suporte">Suporte</string>
    <string name="faq">FAQ</string>
    <string name="contato">Contato</string>
    <string name="favoritos">Favoritos</string>
    <string name="hint_titulo">Título Personalizado (opcional)</string>
    <string name="endereco">Endereço</string>
    <string name="rua">Rua</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento (opcional)</string>
    <string name="referencia">Referência (opcional)</string>
    <string name="voltar">voltar</string>
    <string name="descricaoTitle">Descrição</string>
    <string name="placeholder_ref">Ponto de Referência</string>
    <string name="add_foto_string">Adicionar foto da galeria</string>
    <string name="tirar_foto_string">Tirar foto com a câmera</string>
    <string name="finalizar">Finalizar</string>
    <string name="reiniciar_aplicativo">Reiniciar aplicativo</string>

    <string-array name="tipos_imovel">
        <item>Casa</item>
        <item>Apartamento</item>
        <item>República</item>
        <item>Kitinete</item>
        <item>Outro</item>
    </string-array>
    <string name="title_activity_contato">ContatoActivity</string>
    <string name="atual_moradores">Nº Atual de moradores</string>


</resources>
