<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <requestFocus android:id="@+id/requestFocus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/googlesans"
            android:textColor="@color/primaryText"
            android:text="@string/endereco" />

        <EditText
            android:id="@+id/edtCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidade"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_weight="2"
                android:id="@+id/edtRua"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/rua"
                android:inputType="textPostalAddress"
                tools:ignore="Autofill" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/edtNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complemento"
            android:inputType="textPostalAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edtReferencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/referencia"
            android:inputType="textPostalAddress"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/googlesans"
            android:textColor="@color/primaryText"
            android:text="@string/descricaoTitle" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info_form_desc"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/prosseguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_primary"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/prosseguir"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_gravity="bottom|end"/>

    <Button
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_primary"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/voltar"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_gravity="bottom|start" />


</android.support.design.widget.CoordinatorLayout>