<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".fragments.CadastraInfoImovelFragment">
    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/googlesans"
            android:textColor="@color/primaryText"
            android:text="@string/informacoes_do_imovel" />

        <EditText
            android:id="@+id/edtEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logradouro"
            android:inputType="textPostalAddress"/>

        <!--TODO: Trocar o EditText abaixo para Spinner-->
        <EditText
            android:id="@+id/edtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_do_imovel"/>

        <EditText
            android:id="@+id/edtPreco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/preco"
            android:inputType="numberDecimal"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/edtMoradores"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/_1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:text="@string/max_moradores"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/edtVagas"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/_1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:text="@string/vagas_garagem"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/edtQuartos"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/_1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:text="@string/n_quartos"    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/edtBanheiros"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/_1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:text="@string/n_banheiros"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText android:id="@+id/edtSalas"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/_1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:text="@string/n_salas"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtCozinhas"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/_1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryText"
                android:textSize="16sp"
                android:paddingLeft="8dp"
                android:text="@string/n_cozinhas"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_margin="4dp"
            android:fontFamily="@font/googlesans"
            android:textColor="@color/primaryText"
            android:text="@string/info_form_desc" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info_form_desc"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/prosseguir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prosseguir"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/rounded_button_primary"
            android:layout_gravity="end"/>
    </LinearLayout>

</ScrollView>