<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoImovelActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_card_title"
            android:fontFamily="@font/googlesans"
            android:textSize="40sp"
            android:layout_margin="8dp"
            android:textColor="@color/primaryText" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/grayDark"
                    android:layout_margin="8dp" />

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/grayDark"
                    android:layout_margin="8dp" />

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/grayDark"
                    android:layout_margin="8dp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:text="@string/default_price"
            android:textSize="24sp"
            android:layout_marginLeft="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:text="@string/default_comodos"
            android:textSize="24sp"
            android:layout_marginLeft="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:text="@string/default_card_moradores"
            android:textSize="24sp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

</ScrollView>